<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HowTos" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		<TextView
		    android:id="@+id/title_categories"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:layout_gravity="center"
		    android:textSize="20sp"
		    android:text="@string/categories" />
            
		<TextView
			android:id="@+id/cat1"
			android:layout_marginLeft="10dp" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_virus"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageVirus" />
		
		
		<TextView
			android:id="@+id/cat2"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_slow"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageSlow" />
		
		
		<TextView
			android:id="@+id/cat3"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_guard"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageGuard" />
		
		<TextView
			android:id="@+id/cat4"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_internet"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageInternet" />
		
		<TextView
			android:id="@+id/cat5"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_google"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageGoogle" />
		
		<TextView
			android:id="@+id/cat6"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/more_topics"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="getPageTopics" />
        </LinearLayout>

        
        
        </ScrollView>

</RelativeLayout>