<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PageSlow" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            		<TextView
		    android:id="@+id/title_categories"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:layout_gravity="center"
		    android:textSize="20sp"
		    android:text="@string/help_slow" />
            		
            		
            <ImageView

			    android:id="@+id/image"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:scaleType="center"
			    android:src="@drawable/virus" />
            
            
            <TextView
			android:id="@+id/cat1"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/topic_string_1"
	        android:clickable="true"
	        android:textSize="12sp"
	        android:onClick="goToCategory" />
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            
            
            <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_previous" 
        android:onClick="prevPage"/>
            
            <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next" 
        android:onClick="nextPage"/>
            
            <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_topics" 
        android:onClick="topicsPage" />
		</LinearLayout>

        </LinearLayout>

        
        
        </ScrollView>

</RelativeLayout>