<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HowTos" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		<TextView
		    android:id="@+id/title_topic"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:layout_gravity="center"
		    android:textSize="20sp"
		    android:text="@string/title_category" />
            
		<TextView
			android:id="@+id/topic1"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/topic1title"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="goToTopic" />
		
		
		<TextView
			android:id="@+id/topic2"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/topic2title"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="goToTopic" />
		
		
		<TextView
			android:id="@+id/topic3"
			android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/topic3title"
	        android:clickable="true"
	        android:drawableLeft="@drawable/pic1"
	        android:drawablePadding="10dp"
	        android:layout_marginBottom="20dp"
	        android:textSize="12sp"
	        android:onClick="goToTopic" />
		
        </LinearLayout>

        
        
        </ScrollView>

</RelativeLayout>